# ai-commit-translator

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
cli/: main.py  translate.py
docs/: API.md  ARCHITECTURE.md  CONFIG.md  USAGE.md
prompts/: default.txt
src/ai_commit_translator/: __init__.py  commit.py  translator.py
tests/: test_commit.py
